[package]
name = "rolling-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
iso8601-duration = { version = "0.2.0", default-features = false, features = ["chrono"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }

[dev-dependencies]
proptest = "1.2.0"
